@@ -1,3 +1,10 @@
+Tue Oct 07 19:24:31 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBuddyList.cpp:
+	* src/QGaimBuddyList.h:
+	  - Rewrote the buddy list context-sensitive menu code to reduce
+	    code duplication and ease maintenance a bit.
+
 Tue Oct 07 19:07:13 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
